fix: slug in main.js instead of id. feat: truncate description

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,8 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+
+.truncate {
+    width: 500px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
